bk_ida/gccida/g1/choose_hard_reg_mode
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1147:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode  choose_hard_reg_mode( unsigned int regno, unsigned int nregs) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1149:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1151:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1154:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1158:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1162:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1200:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = ( ( unsigned int)( mode_class_0[v2] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1237:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v9 = ( ( unsigned int)( mode_class_0[v7] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1274:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = ( ( unsigned int)( mode_class_0[v11] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1311:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = ( ( unsigned int)( mode_class_0[v15] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/regclass.c:1359:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v22 = ( ( unsigned int)( mode_class_0[v21 + 52] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/choose_hard_reg_mode/src/obj/regclass.o] Error 1
